Added switching grid functionality

--- a/views/dashboard/navigation.handlebars
+++ b/views/dashboard/navigation.handlebars
@@ -29,7 +29,7 @@
                     <div class="col-lg-3">
                         <div class="form-group" id="name-group">
                             <label for="floor">Floor</label>
-                            <select id="floor" name="floor" class="form-control"
+                            <select id="floorSelect" name="floor" class="form-control"
                                     placeholder="floor"
                                     required autofocus>
                                 <option value=1>1</option>
@@ -59,7 +59,7 @@
                     <!-- Save Grid !-->
                     <div class="col-lg-3 ">
                         <p class="input-label ">Submit Grid</p>
-                        <form href="navigation" method="POST" role="form">
+                        <form role="form">
                             <button type="submit" class="btn btn-success" id="btn-save">Save</button>
                         </form>
                     </div> <!-- col-lg-6 !-->
