--- a/public/stylesheets/tooltips.css
+++ b/public/stylesheets/tooltips.css
@@ -1,14 +1,17 @@
 div.tooltip {
   position: absolute;
   text-align: center;
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250;
   padding: 2px;
   font: 12px sans-serif;
-  background: lightsteelblue;
-  border: 0px;
+  background: #ffffff;
+  border: #c34500 2px solid;
   border-radius: 8px;
   pointer-events: none;
+  -webkit-box-shadow: 10px 10px 58px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 58px 0px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 58px 0px rgba(0,0,0,0.75);
 }
 
 /* Creates a small triangle extender for the tooltip */
@@ -18,10 +21,13 @@ div.tooltip {
   font-size: 10px;
   width: 100%;
   line-height: 1;
-  color: rgba(0, 0, 0, 0.8);
+  /*color: rgba(0, 0, 0, 0.8);*/
   content: "\25BC";
   position: absolute;
   text-align: center;
+  -webkit-box-shadow: 10px 10px 58px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 58px 0px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 58px 0px rgba(0,0,0,0.75);
 }
 
 /* Style northward tooltips differently */
