added new slect by shape. added new buttons to all locations

--- a/views/dashboard/room.handlebars
+++ b/views/dashboard/room.handlebars
@@ -136,7 +136,8 @@
 
                                         <!-- Draw and select location control !-->
                                         <div class="col-lg-12">
-                                            <div class="btn btn-default" id="btn-location-draw">Draw Location</div>
+                                              <div class="btn btn-default" id="btn-location-draw">Draw Location</div>
+                                            <div class="btn btn-default" id="btn-box-draw">Draw By Box</div>
                                             <div class="btn btn-default" id="btn-location-select">Select Location</div>
                                             <div class="row controls hidden" id="location-draw-controls">
                                                 <div class="col-lg-12">
