intergrated navigation to new tooltip.

--- a/views/partials/home/sidebar.handlebars
+++ b/views/partials/home/sidebar.handlebars
@@ -49,9 +49,23 @@
                 </ul>
             </li>
             <li>
-                <div class="input-group " >
-                    <div id="nagivation-start" class="btn btn-success">Start</div>
-                    <div id="navigation-clear" class="btn btn-warning">Clear</div>
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h5>Start Location</h5>
+                        <p id="start-location"></p>
+                    </div>
+                    <div class="col-md-12 text-center">
+                        <h5>End Location</h5>
+                        <p id="end-location"></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 text-center">
+                        <div id="nagivation-start" class="btn btn-success">Start</div>
+                    </div>
+                    <div class="col-md-6">
+                        <div id="navigation-clear" class="btn btn-warning">Clear</div>
+                    </div>
                 </div>
             </li>
 
