minor view fixes

--- a/views/dashboard/index.handlebars
+++ b/views/dashboard/index.handlebars
@@ -78,6 +78,7 @@
                         {title: "Type"},
                         {title: "Room #"},
                         {title: "Room Capacity"},
+                        {title: "Entry Point"},
                         {title: "Options"}
                     ]
                 });
