--- a/views/dashboard/navigation.handlebars
+++ b/views/dashboard/navigation.handlebars
@@ -86,6 +86,8 @@
     </div>
     <!-- /#wrapper -->
 
+    {{> dashboard/confimationmodal }}
+
     {{> dashboard/javascript }}
 
     <!-- Lodash JS !-->
