--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -806,6 +806,26 @@ table.dataTable thead .sorting:after {
     margin-top: 5px;
 }
 
+/* ---- btn Styleing ----*/
+.btn-group-wrap {
+    text-align: center;
+}
+
+.btn-group {
+    margin: 0 auto; 
+    text-align: center;
+    width: inherit;
+    display: inline-block;
+}
+
+/* --- Font Awesome Styleing ---- */
+.vertical-align{
+    vertical-align: middle;
+}
+/* --- Custom coloring --- */
+.danger{
+    color: #a94442;
+}
 
 
 
