--- a/views/dashboard/index.handlebars
+++ b/views/dashboard/index.handlebars
@@ -126,7 +126,7 @@
             data[d]['DT_RowId'] = 'row-' + data[d].id;
             // Added options
             data[d]['options'] = '<a href="/dashboard/details/' + data[d].id + '"><div class="btn btn-default">Detail</div></a>' +
-            '<a href="/dashboard/edit/' + data[d].id + '"><div class="btn btn-warning">edit</div></a>' +
+            '<a href="/dashboard/location/edit/' + data[d].id + '"><div class="btn btn-warning">edit</div></a>' +
             '<div id="btn-delete-' + data[d].id + '" class="btn btn-danger">Delete</div></a>'
         }
         return data;
