--- a/views/dashboard/unknown.handlebars
+++ b/views/dashboard/unknown.handlebars
@@ -154,6 +154,7 @@
 
                             <!-- Form Control !-->
                             <p class="input-label">Form Options</p>
+                            <input id="type" name="type" value="unknown" hidden="true"/>
                             <button type="submit" class="btn btn-success" id="btn-save">Save</button>
                             <button type="reset" class="btn btn-warning" id="btn-clear">Clear</button>
                             <button class="btn btn-danger" id="btn-cancel">Cancel</button>
