--- a/views/partials/home/sidebar.handlebars
+++ b/views/partials/home/sidebar.handlebars
@@ -63,7 +63,7 @@
                     <div class="col-md-6 text-center">
                         <div id="nagivation-start" class="btn btn-success">Start</div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 text-center">
                         <div id="navigation-clear" class="btn btn-warning">Clear</div>
                     </div>
                 </div>
