implimented update, fixed database errores

--- a/views/dashboard/room.handlebars
+++ b/views/dashboard/room.handlebars
@@ -244,6 +244,18 @@
     <!-- Form Controls JS !-->
     <script src="/public/javascripts/control-form.js" ></script>
 
+    <script>
+        var data = {{{data}}}
+        var locationOBJ  = null;
+        if( data != null){
+            locationOBJ = data;
+
+            loadLocation(locationOBJ);
+
+        }
+
+    </script>
+
 
 
 </body>
