--- a/views/dashboard/details.handlebars
+++ b/views/dashboard/details.handlebars
@@ -53,13 +53,29 @@
                         <span id="data-type"></span>
                     </div>
 
-                    <!-- floor !-->
-                    <div id="wrapper-floor" class="col-lg-6 col-md-6">
+                    <!-- Floor input !-->
+                    <div class="col-lg-3 col-md-3">
                         <p class="input-label">
                             Floor:
                         </p>
                         <span id="data-floor"></span>
-                    </div>
+                    </div> <!-- / .col-lg-3 !-->
+
+                    <!-- dispay Optison input !-->
+                    <div class="col-lg-3 col-md-3">
+                        <div id="wrapper-color" class="row">
+                            <div class="col-lg-12 col-md-12">
+                            <p class="input-label" >Color </p>
+                            <span id="data-color" class="col-lg-12 col-md-12"></span>
+                            </div>
+                        </div>
+                        <div id="wrapper-display" class="row">
+                            <div class="col-lg-12 col-md-12">
+                                <p class="input-label">Display Location Name </p>
+                                <span id="data-display" ></span>
+                            </div>
+                        </div>
+                    </div> <!-- / .col-lg-3 !-->
                 </div> <!-- /.row !-->
 
                 <div class="row">
@@ -139,7 +155,7 @@
     </div>
     <!-- /#wrapper -->
 
-    
+
     {{> dashboard/deletemodal}}
 
     {{> dashboard/confirmationmodal}}
@@ -147,12 +163,12 @@
     {{> dashboard/javascript }}
     <script>
         var id = {{ data }};
-        
+
     </script>
 
     <script src="/public/javascripts/draw-polygon.js"></script>
     <script src="/public/javascripts/control-detail.js"></script>
 
-    
+
 
 </body>
