--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -133,6 +133,7 @@
 
                                         <!-- Draw and select location control !-->
                                         <div class="col-lg-12">
+                                            <div class="btn btn-primary" id="btn-toggle-locations">Toggle Locations</div>
                                             <div class="btn btn-default" id="btn-location-draw">Draw Location</div>
                                             <div class="btn btn-default" id="btn-box-draw">Draw By Box</div>
                                             <div class="btn btn-default" id="btn-location-select">Select Location</div>
@@ -140,8 +141,7 @@
                                                 <div class="col-lg-12">
                                                     <div class="btn btn-primary" id="btn-location-fill">Fill</div>
                                                     <div class="btn btn-warning" id="btn-location-clear">Clear</div>
-                                                    <div class="btn btn-success" id="btn-location-save">Save Location
-                                                    </div>
+                                                    
                                                 </div>
                                             </div>
                                         </div> <!-- /.col-lg-6 !-->
@@ -160,7 +160,6 @@
                                             <div class="btn btn-default" id="btn-navigation-show">Show Grid</div>
                                             <div class="btn btn-default" id="btn-navigation-hide">Hide Grid</div>
                                             <div class="btn btn-warning" id="btn-navigation-clear">Clear</div>
-                                            <div class="btn btn-success" id="btn-navigation-save">Set Entry Point</div>
                                         </div>
                                     </div>
                                 </div>
